--- a/조별과제수정/Main/로그인.html
+++ b/조별과제수정/Main/로그인.html
@@ -1,28 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Login</title>
-    <link href="./css/로그인.css" rel="stylesheet" type="text/css" >
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/로그인.css">
+</head>
+<body>
+    <section>
+        <div class="imgBx">
+            <img src="../images/man1.jpg">
+        </div>
+        <div class="contentBx">
+            <div class="formBx">
+            <h2>Login</h2>
+            <form>
+                
+                <div class="inputBx">
+                    <span>UserName</span>
+                    <input type="text" name="">
+                </div>
 
-<form action="" class="form">
-   <span></span>
-   <span></span>
-   <span></span>
-   <span></span>
- <div class="form-inner">
-     <h2>로그인</h2>
-     <div class="content">
-          <input class="input" type="text" placeholder="Username" />
-          <input class="input" type="password" placeholder="Password" />
-          <button class="btn">LOGIN</button>
-    </div>
- </div>
-</form>
+                <div class="inputBx">
+                    <span>Password</span>
+                    <input type="password" name="">
+                </div>
 
-  </body>
+                <div class="remember">
+                    <label><input type="checkbox" name="" id=""> Remember me</label>
+                </div>
+
+                <div class="inputBx">
+                    <input type="submit" value="Sign in" name="" id="">
+                </div>
+
+                <div class="inputBx">
+                    <p>Don't have an account? <a href="회원가입.html">Sign up</a></p>
+                </div>
+
+            </form>
+            </div>
+        </div>
+    </section>
+    
+</body>
 </html>
