--- a/조별과제수정/Main/메인.html
+++ b/조별과제수정/Main/메인.html
@@ -8,8 +8,8 @@
     <link href="./css/header.css" rel="stylesheet" type="text/css" >
 	<link href="./css/layout.min.css" rel="stylesheet" type="text/css" >
 	<link href="./css/normalizer.css" rel="stylesheet" type="text/css" >
-    <link rel="stylesheet" href="메인.css">
-    <link rel="stylesheet" href="jarallax.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="./css/메인세번째단락.css">
     <title>Responsive Website Design</title>
 </head>
 <body>
@@ -92,6 +92,42 @@
             <div class="box"><img src="../images/img3.png" alt="이미지가 없습니다."></div>
         </div>
     </section>
+
+    <section>
+        <p class="font1">famous writers</p>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                </div>
+                <div class="swiper-slide">
+                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
     
     <section class="services" id="Services">
         <div class="heading white">
@@ -136,7 +172,27 @@
         </div>
     </section>
 
-    
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <script>
+    var swiper = new Swiper(".mySwiper", {
+        effect: "coverflow",
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: "auto",
+        coverflowEffect: {
+        rotate: 50,
+        stretch: 0,
+        depth: 100,
+        modifier: 1,
+        slideShadows: true,
+        },
+        pagination: {
+        el: ".swiper-pagination",
+        },
+    });
+    </script>
 
     <script type="text/javascript">
         window.addEventListener('scroll', function(){
